C/sofa.h



/* Astronomy/PrecNutPolar */
void iauBi00(double *dpsibi, double *depsbi, double *dra);

void iauBpn2xy(double rbpn[3][3], double *x, double *y);

void iauC2i00a(double date1, double date2, double rc2i[3][3]);

void iauC2i00b(double date1, double date2, double rc2i[3][3]);

void iauC2ibpn(double date1, double date2, double rbpn[3][3],
               double rc2i[3][3]);

void iauC2t00a(double tta, double ttb, double uta, double utb,
               double xp, double yp, double rc2t[3][3]);

void iauC2t00b(double tta, double ttb, double uta, double utb,
               double xp, double yp, double rc2t[3][3]);

void iauC2teqx(double rbpn[3][3], double gst, double rpom[3][3],
               double rc2t[3][3]);

void iauC2tpe(double tta, double ttb, double uta, double utb,
              double dpsi, double deps, double xp, double yp,
              double rc2t[3][3]);